interface.html now works

--- a/app/src/main/assets/interface.html
+++ b/app/src/main/assets/interface.html
@@ -1,7 +1,14 @@
+<!DOCTYPE html>
 <html>
 <head>
-
+	<meta charset=utf-8 />
 	<title>Relay Control</title>
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
+	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+	<script type="text/javascript" src="https://cdn.rawgit.com/Foliotek/AjaxQ/master/ajaxq.js"></script>
+	<script type="text/javascript" src="https://cdn.rawgit.com/marcoschwartz/aREST.js/master/aREST.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
 
